Attempt to fix the background video being off screen on some browsers

--- a/asset/stylesheet/style.css
+++ b/asset/stylesheet/style.css
@@ -4,6 +4,11 @@
 }
 
 .background-video {
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  min-width: 100%;
+  min-height: 100%;
   background-color: #333;
   filter: blur(3px);
 }
